toolkit/xre/nsAppRunner.cpp
@@ -3769,8 +3769,15 @@ static bool CheckForUserMismatch() { return false; }
 void mozilla::startup::IncreaseDescriptorLimits() {
 #ifdef XP_UNIX
   // Increase the fd limit to accomodate IPC resources like shared memory.
+#  ifdef XP_DARWIN
+  // We use Mach IPC for shared memory, so a lower limit suffices.
   // See also the Darwin case in config/external/nspr/pr/moz.build
-  static const rlim_t kFDs = 4096;
+  static constexpr rlim_t kFDs = 4096;
+#  else   // Unix but not Darwin
+  // This can be increased if needed, but also be aware that Linux
+  // distributions may impose hard limits less than this.
+  static constexpr rlim_t kFDs = 65536;
+#  endif  // Darwin or not
   struct rlimit rlim;
 
   if (getrlimit(RLIMIT_NOFILE, &rlim) != 0) {
